[package]
name = "dx-safecracker"
version = "0.1.0"
authors = ["Spheniscine <spheniscine@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
getrandom = { version = "0.2", features = ["js"] }

# Debug
dioxus-logger = "0.5.1"
rand = "0.8.5"
